[gd_scene load_steps=7 format=3 uid="uid://b77tgxo88nrfq"]

[ext_resource type="Script" uid="uid://6wpsctahhvdf" path="res://src/level/end_section.gd" id="1_a1rqp"]
[ext_resource type="Script" uid="uid://bths8wmrf1pjh" path="res://src/level/mrt_background.gd" id="2_a1rqp"]
[ext_resource type="Texture2D" uid="uid://b1nboppa1sgny" path="res://assets/level/CABIN_FRONT_BACK.png" id="2_iyfca"]
[ext_resource type="PackedScene" uid="uid://hw6s2crnu56b" path="res://src/ui/interaction_timer.tscn" id="4_2unck"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iyfca"]
size = Vector2(32, 260)

[sub_resource type="CircleShape2D" id="CircleShape2D_a1rqp"]
radius = 127.03

[node name="EndSection" type="Node2D"]
script = ExtResource("1_a1rqp")

[node name="MRTBackground" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_iyfca")
script = ExtResource("2_a1rqp")

[node name="OutOfBounds(Right)" type="StaticBody2D" parent="." groups=["WorldExtent"]]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBounds(Right)"]
position = Vector2(342, -38)
shape = SubResource("RectangleShape2D_iyfca")

[node name="ExitMrtMap" type="Area2D" parent="."]
position = Vector2(150, -20)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitMrtMap"]
shape = SubResource("CircleShape2D_a1rqp")

[node name="InteractionTimer" parent="ExitMrtMap" instance=ExtResource("4_2unck")]
anchors_preset = 8

[connection signal="body_entered" from="ExitMrtMap" to="." method="_on_exit_mrt_map_body_entered"]
[connection signal="body_exited" from="ExitMrtMap" to="." method="_on_exit_mrt_map_body_exited"]
[connection signal="on_time_timeout" from="ExitMrtMap/InteractionTimer" to="." method="_on_interaction_timer_on_time_timeout"]
